appId: ${MAESTRO_APP_ID}
---
- tapOn: Login
- tapOn: Continue
- tapOn:
    point: 50%,78%
- inputText: ${MAESTRO_USER_EMAIL}
- runFlow: ../ios/dark-box-return.yaml
- inputText: ${MAESTRO_USER_PASSWORD}
- runFlow: ../ios/dark-box-return.yaml
