appId: ${MAESTRO_APP_ID}
---
- tapOn: $0.00
- inputText: 12345
- tapOn: calendar
- assertVisible: $123.45
