appId: ${MAESTRO_APP_ID}
---
- tapOn: Achat
- tapOn: Revenu
- assertVisible: Revenu
