appId: ${MAESTRO_APP_ID}
---
- tapOn: Filter tags…
- inputText: g
- inputText: r
- inputText: o
- inputText: c
- inputText: e
- inputText: r
- inputText: i
- inputText: e
- inputText: s
- tapOn:
    text: Add
    index: 1
- runFlow: ../ios/dark-box-return.yaml
